[gd_scene load_steps=16 format=3 uid="uid://huwkdh4tag1b"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_1vwtw"]
[ext_resource type="Texture2D" uid="uid://cw1wdq2pajdi3" path="res://assets/UI - icons/Backgound/Background_Blue.png" id="2_qw381"]
[ext_resource type="Texture2D" uid="uid://cmbfmb4hc1wx6" path="res://assets/Game&Logo/Game-Logo@3x.png" id="4_4sixy"]
[ext_resource type="FontFile" uid="uid://ba8w6pudjptl8" path="res://assets/fonts/Gluten-Black.ttf" id="4_rf3ci"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6cwo"]
bg_color = Color(0.261683, 0.420844, 0.746305, 0.4)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mywrn"]
bg_color = Color(0.780392, 0.145098, 0.243137, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1x6fi"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pmjw"]
bg_color = Color(0.846269, 0, 0.13282, 1)
corner_radius_top_left = 26
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_camq5"]
bg_color = Color(0.909804, 0.360784, 0.0509804, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8f47"]
bg_color = Color(0.509804, 0.843137, 0.721569, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4re7w"]
bg_color = Color(0.98415, 0.333938, 0.474233, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1dmu"]
bg_color = Color(0.98415, 0.333938, 0.474233, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvttb"]
bg_color = Color(0.98415, 0.333938, 0.474233, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuc0d"]
bg_color = Color(0.352941, 0.67451, 0.537255, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywwkr"]
bg_color = Color(0.98415, 0.333938, 0.474233, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -676.0
offset_top = -393.0
offset_right = -676.0
offset_bottom = -393.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.18896, 1.1876)
script = ExtResource("1_1vwtw")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 6.0
offset_right = 2296.0
offset_bottom = 1302.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qw381")
metadata/_edit_lock_ = true

[node name="Game-logo_3x" type="Sprite2D" parent="."]
position = Vector2(567, 194)
scale = Vector2(0.432668, 0.432668)
texture = ExtResource("4_4sixy")
metadata/_edit_lock_ = true

[node name="Menu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 393.0
offset_top = 386.0
offset_right = 750.0
offset_bottom = 634.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_p6cwo")
metadata/_edit_lock_ = true

[node name="new" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 26.0
offset_right = 150.0
offset_bottom = 86.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rf3ci")
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxFlat_mywrn")
theme_override_styles/hover = SubResource("StyleBoxFlat_mywrn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mywrn")
theme_override_styles/normal = SubResource("StyleBoxFlat_1x6fi")
text = "New Game"
metadata/_edit_lock_ = true

[node name="load" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -31.0
offset_right = 149.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rf3ci")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_mywrn")
theme_override_styles/hover = SubResource("StyleBoxFlat_mywrn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mywrn")
theme_override_styles/normal = SubResource("StyleBoxFlat_1x6fi")
text = "Load Game"
metadata/_edit_lock_ = true

[node name="quit" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -86.0
offset_right = 150.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_rf3ci")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_5pmjw")
theme_override_styles/hover = SubResource("StyleBoxFlat_5pmjw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5pmjw")
theme_override_styles/normal = SubResource("StyleBoxFlat_camq5")
text = "Quit"
metadata/_edit_lock_ = true

[node name="confirmationPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 419.0
offset_top = 256.0
offset_right = 719.0
offset_bottom = 376.0
pivot_offset = Vector2(150, 75)
theme_override_styles/panel = SubResource("StyleBoxFlat_c8f47")

[node name="Label" type="Label" parent="confirmationPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.5
offset_top = 15.0
offset_right = 126.5
offset_bottom = 48.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rf3ci")
text = "Are you want to exit
the game ?"
horizontal_alignment = 1

[node name="confirm" type="Button" parent="confirmationPanel"]
layout_mode = 0
offset_left = 29.0
offset_top = 66.0
offset_right = 129.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("4_rf3ci")
theme_override_styles/focus = SubResource("StyleBoxFlat_4re7w")
theme_override_styles/hover = SubResource("StyleBoxFlat_c1dmu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hvttb")
theme_override_styles/normal = SubResource("StyleBoxFlat_yuc0d")
text = "Confirm"

[node name="cancel" type="Button" parent="confirmationPanel"]
layout_mode = 0
offset_left = 164.0
offset_top = 66.0
offset_right = 264.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("4_rf3ci")
theme_override_styles/focus = SubResource("StyleBoxFlat_4re7w")
theme_override_styles/hover = SubResource("StyleBoxFlat_c1dmu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ywwkr")
theme_override_styles/normal = SubResource("StyleBoxFlat_yuc0d")
text = "Cancel"

[connection signal="pressed" from="Menu/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Menu/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Menu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="confirmationPanel/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="confirmationPanel/cancel" to="." method="_on_cancel_pressed"]
